# inspectorch

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  setup.py  zukoutils.py
example/: README.md  example.ipynb  example.py  example_flow_matching.ipynb  example_flow_matching.py  example_flow_matching_cfm.ipynb  example_mflow.ipynb  example_mflow.py  example_normalizing_flow.ipynb  example_normalizing_flow.py  hinode_data.npz
inspectorch/: __init__.py  datasets.py  density_estimator.py  dimreduction.py  flow_matching.py  flow_matching_cfm.py  flow_matching_ffm.py  flow_matching_sbi.py  flowutils.py  flowutils_DataParallel.py  flowutils_Lightning.py  genutils.py  mflowutils.py  normalizing_flow.py  plot_params.py  utils.py  velocity_models.py
test/: test_backends.py  test_device_selection.py  test_mps_acceleration.py  verify_architectures.py
