[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "inspectorch"
description = "Efficient rare event exploration with normalizing flows"
authors = [
  { name = "Carlos Jose Diaz Baso" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["normalizing flows", "rare events", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch",
    "nflows",
    "numpy",
    "matplotlib",
    "einops",
    "scipy",
    "ipykernel",
    "jupyterlab",
    "tqdm",
    "flow_matching",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black"]
viz = ["seaborn"]


# version will be taken from git tags
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/cdiazbas/inspectorch"

[tool.setuptools]
packages = ["inspectorch"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"  # or "post-release"
local_scheme = "node-and-date"
fallback_version = "1.0.dev0"
