[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "inspectorch"
description = "Efficient rare event exploration with normalizing flows"
authors = [
  { name = "Carlos Jose Diaz Baso" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
keywords = ["normalizing flows", "rare events", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "nflows>=0.14",
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "einops>=0.6.0",
    "scipy>=1.7.0",
    "ipykernel>=6.0.0",
    "jupyterlab>=3.0.0",
    "tqdm>=4.60.0",
    "flow_matching>=1.0.0",
    "torchdiffeq>=0.2.3",
    "torchcfm>=1.0.0",
    "pot>=0.9.0",
]

[project.optional-dependencies]
# Development tools
dev = ["pytest", "pytest-cov", "ruff", "black"]

# Visualization
viz = ["seaborn"]

# Complete installation with all features
all = [
    "pytest", "pytest-cov", "ruff", "black",  # dev
    "seaborn",  # viz
]

[project.urls]
Homepage = "https://github.com/cdiazbas/inspectorch"

[tool.setuptools]
packages = ["inspectorch"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
fallback_version = "1.0.dev0"
